package protocol;

message SSPacketKeepAlive {
	required int32 Flag = 1;
}